error_2.txt
node : file:///C:/Users/U
suario/Documents/GitHub/e
coalerta_back/src/middlew
are/auth.js:29
En l?nea: 1 Car?cter: 1
+ node index.js 2>&1 | 
Out-File -Encoding ascii 
error_2.txt
+ ~~~~~~~~~~~~~~~~~~
    + CategoryInfo       
       : NotSpecified:   
  (file:///C:/User...w   
 are/auth.js:29:Strin    
g) [], RemoteExcepti    
on
    + FullyQualifiedErro 
   rId : NativeCommandE  
  rror
 
<<<<<<< Updated upstream
^^

SyntaxError: Unexpected 
token '<<'
    at 
compileSourceTextModule (
node:internal/modules/esm
/utils:338:16)
    at ModuleLoader.modul
eStrategy (node:internal/
modules/esm/translators:1
02:18)
    at #translate (node:i
nternal/modules/esm/loade
r:437:12)
    at ModuleLoader.loadA
ndTranslate (node:interna
l/modules/esm/loader:484:
27)

Node.js v22.12.0
